--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -100,6 +100,17 @@ border-radius: 50%;
   z-index: 0;
 }
 
+.cursor {
+  display: inline-block;
+  width: 1ch;
+  animation: blink 1s steps(1) infinite;
+}
+
+@keyframes blink {
+  0%, 50% { opacity: 1; }
+  51%, 100% { opacity: 0; }
+}
+
 @media screen and (max-width: 830px) {
   .container {
     flex-direction: column-reverse;
